@@ -1,5 +1,7 @@
 *SVN*
 
+* Mercurial SCM module [Tobias Luetke, Matthew Elder]
+
 * Invoke all commands via sh (customizable via :default_shell) [Jamis Buck]
 
 * Make sure all directories exist on each deploy which are necessary for subsequent commands to succeed, since some SCM's won't save empty directories [Matthew Elder]
